--- a/src/components/HumaaansSpace/style.css
+++ b/src/components/HumaaansSpace/style.css
@@ -1,5 +1,5 @@
 .humaaans-space {
-  background-image: url(https://c.animaapp.com/GvWiOB2X/img/humaaans-space-1.png);
+  background-image: url("../../../public/Humaaans2.png");
   background-size: 100% 100%;
   height: 203px;
   width: 338px;
