--- a/styles/desktopstyle.css
+++ b/styles/desktopstyle.css
@@ -1,6 +1,10 @@
 .desktop {
   background-color: #f6ffed;
   border-radius: 35px;
+  position: relative;
+  left:-275px;
+  top: -25px;
+  z-index: -1;
 }
 
 .desktop .div {
